welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:11: error: ')' expected but 'else' found.
		}else{
                 ^inOrder:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (min(a,b)==a){
        ^